fixes alignment

--- a/bundle.css
+++ b/bundle.css
@@ -151,6 +151,7 @@ h1 {
   }
 
   .content {
-    width: 60%
+    width: 60%;
+    align-items: start;
   }
 }
